--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,4 +36,24 @@ h1 {
       background-color: rgb(13, 14, 15);
     }
       
-  
+
+  section {
+    display: flex;
+    width: 1200px;
+    height: 430px;
+
+  }
+  section img {
+    width: 100px;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .6;
+    transition: 1.4s ease;
+  }
+  section img:hover {
+    cursor: crosshair;
+    width: 750px;
+    opacity: 1;
+    filter: contrast(120%);
+    
+  }
