--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,27 @@
 .tarjeta {
-    margin: 2%;
-    display: inline-block;
+  display: inline-flex;
+  width: 300px;
+  height: 300px;
+  margin: .5%;
 
+}
+.tarjeta img {
+  width: 150px;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: .6;
+  transition: 1.4s ease;
+}
+.tarjeta img:hover {
+  cursor: crosshair;
+  width: 300px;
+  opacity: 1;
+  filter: contrast(120%);
+  
+}
 
         
-}
+
 h1 {
     color: orange;
     background-color: rgb(13, 14, 15); margin-right: 850px;
@@ -51,7 +68,7 @@ h1 {
     transition: 1.4s ease;
   }
   section img:hover {
-    cursor: crosshair;
+   
     width: 750px;
     opacity: 1;
     filter: contrast(120%);
